--- a/Desafio2/css/footer.css
+++ b/Desafio2/css/footer.css
@@ -1,15 +1,20 @@
-html, body {
-    height: 100%;
-  }
-  body {
-    display: flex;
-    flex-direction: column;
-  }
-  .content {
-    flex: 1 0 auto;
-  }
-  .footer {
-      background: red;
-    flex-shrink: 0;
-    height: 50px;
-  }
+html,
+body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  background: yellow;
+  min-height: 10vh;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  background: red;
+  flex-shrink: 0;
+  min-height: 10vh;
+}
