--- a/css/invie.css
+++ b/css/invie.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Allerta|Montserrat:400,700');
+@import url("https://fonts.googleapis.com/css?family=Allerta|Montserrat:400,700");
 
 /* selector universal
 * {
@@ -29,7 +29,6 @@ section {
     background: salmon;
 } */
 
-
 /* selector de id */
 /* #header {
     border: 3px solid black;
@@ -44,120 +43,123 @@ section {
 } */
 
 body {
-    font-family: 'Allerta', sans-serif;
-    margin: 0;
+  font-family: "Allerta", sans-serif;
+  margin: 0;
 }
 
-button, input[type=submit] {
-    border-radius: 12px;
-    color: white;
-    /* background: #fd324e; */
-    background:linear-gradient(to right,#ff7250,#fe344e);
-    border: none;
-    padding: 8px 12px;
-    font-size: 18px;
-    cursor: pointer;
+button,
+input[type="submit"] {
+  border-radius: 12px;
+  color: white;
+  /* background: #fd324e; */
+  background: linear-gradient(to right, #ff7250, #fe344e);
+  border: none;
+  padding: 8px 12px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 table {
-    width: 100%;
+  width: 100%;
 }
 
 th {
-    background: #273b47;
-    color: white;
-    padding: 10px;
-    text-align: left;
+  background: #273b47;
+  color: white;
+  padding: 10px;
+  text-align: left;
 }
 
 td {
-    padding: 20px;
+  padding: 20px;
 }
 
-table, th, td {
-    border: 1px solid #273b47;
-    border-collapse: collapse;
+table,
+th,
+td {
+  border: 1px solid #273b47;
+  border-collapse: collapse;
 }
 
 .contenedor {
-    width: 70%;
-    margin: auto;
+  width: 70%;
+  margin: auto;
 }
 
 /* selector de clase */
 .titulo {
-    font-size: 70px;
-    font-family: 'Montserrat', sans-serif;
-    margin-bottom: 0;
-    margin-top: 70px;
+  font-size: 70px;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 0;
+  margin-top: 70px;
 }
 
 .titulo span {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .title-a {
-    font-size: 24px;
-    margin-top: 0;
+  font-size: 24px;
+  margin-top: 0;
 }
 
-.title-b{
-    font-size: 50px;
-    margin-bottom: 20px;
+.title-b {
+  font-size: 50px;
+  margin-bottom: 20px;
 }
 
 .guitarras {
-    color: #1F313C;
+  color: #1f313c;
 }
 
 .guitarras h2 {
-    font-size: 35px;
-    font-family: 'Montserrat', sans-serif;
+  font-size: 35px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .portada {
-    background-image: url('../images/background.png');
-    background-size: cover;
-    color: white;
-    padding: 20px;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  background-image: url("../images/background.png");
+  background-size: cover;
+  color: white;
+  padding: 20px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 #portada h1::first-letter {
-    color: red;
-    font-size: 100px;
+  color: red;
+  font-size: 100px;
 }
 
 .menu {
-    font-size: 24px;
-    display: inline-block;
-    position: absolute;
-    right: 0;
+  font-size: 24px;
+  display: inline-block;
+  position: absolute;
+  right: 0;
 }
 
 .menu li {
-    display: inline-block;
-    margin-left: 30px;
+  display: inline-block;
+  margin-left: 30px;
 }
 
 .menu a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .menu li:before {
-    content: "≻";
-    font-size: 30px;
-    line-height: 20px;
-    color: white;
+  content: "≻";
+  font-size: 30px;
+  line-height: 20px;
+  color: white;
 }
 
 .logotipo {
-    display: inline-block;
-    margin-left: 0;
+  display: inline-block;
+  margin-left: 0;
 }
 
 /* *{
@@ -167,113 +169,116 @@ table, th, td {
 } */
 
 .portada button {
-    margin-bottom: 70px;
+  margin-bottom: 70px;
 }
 
 .derecha {
-    float: right;
-    position: relative;
-    bottom: 128px;
+  float: right;
+  position: relative;
+  bottom: 128px;
 }
 
 .izquierda {
-    float: left;
-    position: relative;
-    /* top: 80px; */
+  float: left;
+  position: relative;
+  /* top: 80px; */
 }
 
 .guitarra {
-    padding: 10px;
-    margin: 10px 10px 40px 10px;
-    /* overflow: hidden; */
-    border: 1px solid #1F313C;
-    border-radius: 10px;
+  padding: 10px;
+  margin: 10px 10px 40px 10px;
+  /* overflow: hidden; */
+  border: 1px solid #1f313c;
+  border-radius: 10px;
 }
 
 .guitarra ol {
-    padding-block-end:  0;
+  padding-block-end: 0;
 }
 
 .guitarra.b {
-    height: 220px;
+  height: 220px;
 }
 
 .contenedor-guitarra-a {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 .contenedor-guitarra-b {
-    margin-left: 370px;
-    position: relative;
-    bottom: 50px;
+  margin-left: 370px;
+  position: relative;
+  bottom: 50px;
 }
 
 .header {
-    position: relative;
+  position: relative;
 }
 
 .footer {
-    margin-top: 41px;
-    background: #273b47;
-    padding: 50px 10px;
+  margin-top: 41px;
+  background: #273b47;
+  padding: 50px 10px;
 }
 
 .contacto {
-    display: flex;
-    width: 300px;
-    flex-wrap: wrap;
-    align-items: center;
+  display: flex;
+  width: 300px;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .contacto img {
-    display: block;
+  display: block;
 }
 
 .contacto strong {
-    display: block;
+  display: block;
 }
 
 .contacto a {
-    text-decoration: none;
-    color: white;
-    margin: 10px 10px 10px 0;
+  text-decoration: none;
+  color: white;
+  margin: 10px 10px 10px 0;
 }
 
 .footer .contenedor {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .formulario {
-    display: flex;
-    flex-wrap: wrap;
-    color: white;
-    /* padding: 50px 10px; */
+  display: flex;
+  flex-wrap: wrap;
+  color: white;
+  /* padding: 50px 10px; */
 }
 
-.col1, .col2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-
+.col1,
+.col2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-.col2 input[type=submit]{
-    margin-top: 15px;
+.col2 input[type="submit"] {
+  margin-top: 15px;
 }
 
 .intereses label {
-    font-size: 12px;
+  font-size: 12px;
 }
 
-.formulario input, .sexo, .intereses {
-    margin-bottom: 15px; 
+.formulario input,
+.sexo,
+.intereses {
+  margin-bottom: 15px;
 }
 
-input:focus, textarea:focus {
-    background: yellow;
+input:focus,
+textarea:focus {
+  background: yellow;
 }
 
 .tabla {
-    margin: 50px 0;
+  margin: 50px 0;
 }
